Another spacing issue

--- a/mainpage.css
+++ b/mainpage.css
@@ -8,7 +8,8 @@
 
 .op {
     display: inline-block;
-    margin: 20px;
+    margin-bottom: 10px;
+    margin-top: 10px;
     padding: 20px;
     background-color: #22323d;
     transition: 0.2s ease-in-out;
@@ -24,7 +25,7 @@
 }
 
 .op:hover {
-    transform: scale(1.05);
+    transform: scale(1.03);
     background-color: rgb(50, 72, 87);
 }
 
